# syrup-backend

./: .gitignore  LICENSE  Makefile  README.md  dune  dune-project  main.ml  opti.opam  run.sh  run_BCLT.sh  run_OMS.sh  run_Z3.sh  syrup_backend.opam  write_examples.sh
examples/: block_192.disasm  block_192.map  block_192.model  block_192.smt  block_192_rev.disasm  block_192_rev.model  block_192_rev.smt  block_ex1.disasm  block_ex1.map  block_ex1.model  block_ex1.smt  block_ex1.smt2  block_ex2.disasm  block_ex2.map  block_ex2.model  block_ex2.smt  block_ex2.smt2  result_block_192.json  result_block_192_rev.json  result_block_ex1.json  result_block_ex2.json
examples/add/: encoding_BCLT.smt2  encoding_OMS.smt2  instruction.map
examples/block_192/: encoding_BCLT.smt2  encoding_OMS.smt2  encoding_Z3.smt2  encoding_bclt.smt2  encoding_blcg.smt2  encoding_oms.smt2  encoding_z3.smt2  input.json  instruction.map  model.smt2  objectives.smt2  result.json
examples/block_192_rev/: encoding_BCLT.smt2  encoding_OMS.smt2  encoding_Z3.smt2  encoding_bclt.smt2  encoding_oms.smt2  encoding_z3.smt2  input.json  instruction.map  model.smt2  objectives.smt2  result.json
examples/block_add/: encoding_BCLT.smt2  encoding_OMS.smt2  encoding_Z3.smt2  encoding_bclt.smt2  encoding_oms.smt2  encoding_z3.smt2  input.json  model.smt2  objectives.smt2  result.json
examples/block_add_2/: encoding_BCLT.smt2  encoding_OMS.smt2  encoding_Z3.smt2  encoding_bclt.smt2  encoding_oms.smt2  encoding_z3.smt2  input.json  instruction.map  model.smt2  objectives.smt2  result.json
examples/block_div_ex/: encoding_bclt.smt2  encoding_z3.smt2  input.json  instruction.map  model.smt2  objectives.smt2  result.json
examples/block_long/: encoding_BCLT.smt2  encoding_OMS.smt2  encoding_Z3.smt2  encoding_bclt.smt2  encoding_oms.smt2  encoding_z3.smt2  input.json  instruction.map  model.smt2  objectives.smt2  result.json
examples/cav2020/: encoding_BCLT.smt2  encoding_OMS.smt2  encoding_Z3.smt2  input.json  instruction.map  objectives.smt2  running-example.evm  running-example.sol
input/: block_192.json  block_192_rev.json  block_ex1.json  block_ex2.json
lib/: consts.ml  dune  enc.ml  helper.ml  inpt.ml  instruction.ml  instruction_util.ml  outpt.ml  params.ml  print_trgt.ml  sk_util.ml  user_params.ml  z3util.ml
test/: dune  test_enc.ml  test_inpt.ml  test_instr.ml  test_instruction_util.ml  test_intruction_util.ml  test_outpt.ml  test_params.ml  test_prsv.ml  test_sk_util.ml  test_util.ml  test_utlz.ml
