opam-version: "2.0"
name: "syrup_backend"
version: "1.0"
synopsis: "backend of the syrup toolchain"
maintainer: [ "mail@maria-a-schett.net" ]
authors: [ "mail@maria-a-schett.net" ]
license: "Apache-2.0"
homepage: ""
dev-repo: ""
bug-reports: ""
depends: [
  "ocaml"
  "dune"
  "ocamlfind"
  "z3" 
  "core"
  "sedlex"
  "zarith"
  "ounit" {with-test}
  "ppx_sexp_conv"
  "ppx_deriving"
  "ppx_deriving_yojson"
]
build: [
  [ "dune" "subst" ] {pinned}
  [ "dune" "build" "-p" name "-j" jobs ]
]
run-test: [make "test"]
