opam-version: "2.0"
name: "syrup_backend"
version: "1.0"
synopsis: "backend of the syrup toolchain"
maintainer: [ "mail@maria-a-schett.net" ]
authors: [ "mail@maria-a-schett.net" ]
license: "Apache-2.0"
homepage: "https://github.com/mariaschett/syrup-backend"
dev-repo: "https://github.com/mariaschett/syrup-backend"
bug-reports: "https://github.com/mariaschett/syrup-backend"
depends: [
  "ocaml"
  "dune"
  "ocamlfind"
  "core"
  "z3" {= "4.8.7"}
  "ppx_deriving"
  "ppx_deriving_yojson"
  "sedlex"
  "ounit" {with-test}
]
build: [
  [ "dune" "subst" ] {pinned}
  [ "dune" "build" "-p" name "-j" jobs ]
]
run-test: [make "test"]
