(executables
 (names test_sk_util test_instr test_inpt)
 (libraries core opti oUnit z3)
 (preprocess (pps ppx_deriving.std))
)

(alias
 (name runtest)
 (deps (:x test_sk_util.exe))
 (action (run %{x}))
)

(alias
 (name runtest)
 (deps (:x test_instr.exe))
 (action (run %{x}))
)

(alias
 (name runtest)
 (deps (:x test_inpt.exe))
 (action (run %{x}))
)